--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,246 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+@import url("https://fonts.googleapis.com/css?family=IBM+Plex+Serif:wght@400;5086&family-Lora:wght@400;500&family-Poppins:wght@400;6008display-swap");
+* {
+  margin: 0;
+padding: 0;
+box-sizing: border-box;
+font-family: "Poppins", sans-serif;
+}
+
+:root {
+--text-clr: #4a5c6c;
+--bg-clr: #f2f4fc;
+-border-clr: rgb(156, 176, 193)
+}
+a {
+  text-decoration: none;
+}
+
+html {
+font-size: 62.5%;
+}
+
+body {
+background-color: var(--bg-clr);
+}
+h2 {
+font-family: "Lora", serif;
+   color: var(--text-clr);
+  font-size: 2rem;
+  transition: all 0.5s linear;
+}
+  
+img {
+/*width: 25rem; */
+min-width: 10rem;
+max-height: 30rem;
+margin: 1rem 0;
+border-radius: 1rem;
+transition: all 0.3s linear
+}
+.container {
+max-width: 140rem; 
+margin: auto; 
+padding: 3rem;
+}
+
+
+.grid {
+/*width: 100%; */
+display: grid;
+gap: 3rem;
+}
+
+
+
+
+.grid-4-col {
+grid-template-columns: repeat(4, 1fr);
+
+
+}
+
+ .card {
+width: 25rem; 
+max-width: 30rem; 
+min-height: 30rem;
+/* background-color: #f
+/* padding: 2rem; */
+ border-radius: 1rem;
+display: flex;
+justify-content: center;
+ align-items: center;
+}
+
+.search-section {
+margin: auto;
+text-align: center;
+margin: 4rem 0;
+}
+
+ input {
+width: 30rem;
+border-radius: 100px;
+border: none;
+border: 1px solid var(--border-clr);
+padding: 1rem 2rem;
+font-size: 1.8rem;
+box-shadow: rgba(0,0,0,0.1) 0px 1px 3px 0px,
+rgba(0,0,0,0.06) 0px 1px 2px 0px;
+outline: none;
+margin-top : 2rem;
+ }
+
+.card-error p
+{
+ color:red;
+ margin-top: 1rem ;
+font-size: 1.8rem;
+}
+
+
+
+.p
+{
+margin-top: 1rem; font-size: 1.8rem;
+
+}
+
+.movie-section {
+  width:100%;
+  height: 100vb;
+  background-color: var(--bg-clr);
+  display: grid;
+ place-items: center;
+}
+
+ .loading {
+  font-size: 3.2rem;
+  color: var(-text-clr);
+  text-align: center;
+   } 
+ 
+  
+  .movie-section .loading {
+  font-size: 3.2rem;
+ color: var(--bg-clr);
+  text-align: center;
+  }
+  .movie-card{
+/* min-width: 30ren;
+width: 50vw;
+background-color: var(-bg-clr);
+display: grid;
+gap: 2rem;
+grid-template-columns: 0.6fr 1fr;
+box-shadow:rgba(99, 99, 99,0.2) 0px 2px 8px 0px;
+border-radius: 2rem; */
+/* grid-template-columns: 1fr; */
+background-color: var(-bg-clr);
+display: grid;
+gap: 2rem;
+grid-template-columns: 1fr 2fr;
+box-shadow:rgba(99, 99, 99,0.2) 0px 2px 8px 0px;
+border-radius: 2rem;
+
+}
+figure{
+  margin: 0;
+  padding: 0;
+}
+.movie-card img {
+width: 100%;
+/* height: 100%; */
+margin: 0;
+border-radius: 0;
+border-top-left-radius: 2rem;
+border-bottom-left-radius: 2rem;
+max-height: 50rem;
+height: auto
+ }
+ .movie-card .title{
+font-size: 2.8rem;
+color: var(--text-clr);
+font-weight: bold;
+}
+
+/* .card-content {
+display: flex; 
+justify-content: center;
+align-items: flex-start;
+flex-direction: column;
+gap: 1rem;
+} */
+.card-content {
+  padding-left:2rem;
+}
+.card-text {
+  font-size: 1.8rem;
+  display: flex;
+}
+a {
+  text-align: center;
+   display: flex;
+justify-content: center;
+margin-top: 2rem;
+padding: 3.2rem 1rem; 
+color: var(-text-clr);
+border: 0.2rem solid var(--text-clr);
+font-size: 1.8rem;
+border-radius: 0.5rem;
+transition: all 0.3s linear;
+}
+a.button {
+  text-align: center;
+  display: inline-block; 
+  margin-top: 2rem;
+  padding: 1rem 3.2rem; 
+  color: var(--text-clr); 
+  border: 0.2rem solid var(--text-clr);
+  font-size: 1.8rem;
+  border-radius: 0.5rem;
+  transition: all 0.3s linear;
+  text-decoration: none; 
+}
+a:hover {
+background-color: var(-text-clr);
+color:var(--bg-clr);
+}
+a:hover h2{
+  background-color: var(--text-clr);
+  color:var(--bg-clr);
+  transform: translateY(-1.5rem);
+  display: inline-block;
+}
+  
+  a:hover img {
+   transform: scale(1.1);
+  }
+ /* .back-btn {
+  padding: 1.2rem 3.6rem;
+  margin-bottom: 3rem;
+ } */
+
+
+.back-btn {
+  padding: 1.2rem 3.6rem;
+  margin-bottom: 3rem;
+  font-size: 1.6rem; 
+  color: white;
+  background-color: var(--text-clr);
+  border: solid;
+  border-radius: 0.3rem;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+  width: 30%;
+}
+
+
+ a.button:hover {
+  background-color: var(--text-clr); /* Add some visual feedback on hover */
+  color: white; /* Adjust text color on hover */
 }
